fix: list text alignment

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -136,7 +136,7 @@ a.secondary {
   }
 
   .main ol {
-    text-align: center;
+    text-align: left;
   }
 
   .ctas {
